# car_qr_service

./: .env.example  LICENSE  README.en.md  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 41589eced949_add_timezone_support_to_users_created_at.py  442637048b47_add_show_phone_number_to_user_model_.py  4708f1c5572b_add_show_phone_number_to_user_model.py  ae4bde31d950_create_user_and_car_tables.py
src/car_qr_service/: config.py  main.py
src/car_qr_service/auth/: router.py  security.py  utils.py
src/car_qr_service/cars/: crud.py  router.py  schemas.py
src/car_qr_service/database/: database.py  models.py
src/car_qr_service/pages/: router.py
src/car_qr_service/public/: router.py
src/car_qr_service/templates/: base.html  index.html  public_car.html
src/car_qr_service/templates/pages/: cabinet.html  login.html  register.html  welcome.html
src/car_qr_service/templates/partials/: call_success.html  car_result.html  car_row.html
src/car_qr_service/users/: crud.py  router.py  schemas.py
tests/: conftest.py  helpers.py  test_cars.py  test_public_rotes.py  test_users.py
