[tool.poetry]
name = "car-qr-service"
version = "0.1.0"
description = "Service for car owners to expose their contact data thought qr code."
authors = ["Oleksander  Shevchenko <oleksandr.shevchenko@damen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
unicorn = "^2.1.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
