[tool.poetry]
name = "car-qr-service"
version = "0.1.0"
description = "Service for car owners to expose their contact data thought qr code."
authors = ["Oleksander  Shevchenko <oleksandr.shevchenko@damen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.11.7"}
uvicorn = "^0.35.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
